# frappe-desk-ui

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DIAGRAM.md  Dioxus.toml  README.md  fix.py  llm.context.xml  llm_context.xml  test.py
crates/desk-app/: Cargo.toml
crates/desk-app/src/: main.rs  router.rs  state.rs
crates/desk-components/: Cargo.toml
crates/desk-components/src/: lib.rs  sse.rs  state.rs
crates/desk-components/src/form_engine/: fields.rs  interpreter.rs  list_view.rs
crates/desk-components/src/layout/: navbar.rs  sidebar.rs
crates/desk-components/src/widgets/: builder.rs  dashboard.rs  mod.rs
