[package]
name = "desk-components"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "=1.42.0", features = ["serde"] }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "HtmlInputElement"] }
futures-util = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
log = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
